# RealEngine

./: .gitignore  CodeStyle  GameEngine.pro  TestGraphicsWorker.cpp  TestGraphicsWorker.h  main.cpp  testgraphicsworker.cpp
engine/: Core.cpp  Core.h  GraphicsWorker.h  Module.h  core.cpp  core.h  engine.i  forwards.h  graphicsmodule.h  graphicsworker.cpp  graphicsworker.h  includes.h  module.cpp  module.h  worker.cpp  worker.h
engine/exceptions/: UnableToDetermineWorkerType.h  exceptions.h  exceptions.i  includes.h  unabletodetermineworkertype.cpp  (+1 more)
src/: CMakeLists.txt  TestGraphicsWorker.cpp  TestGraphicsWorker.h  main.cpp  testclass.cpp  testclass.h
src/engine/: AbstractWorker.cpp  AbstractWorker.h  Core.cpp  Core.h  GraphicsWorker.cpp  GraphicsWorker.h  Module.cpp  Module.h  ModuleUniquePtr.hpp  ModuleUniquePtrHelper.hpp  ModuleWeakPtr.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp  Worker.cpp  Worker.h  forwards.h  includes.h
src/engine/exceptions/: ModuleAddingException.cpp  ModuleAddingException.h  ModuleException.cpp  ModuleException.h  UnableToDetermineWorkerType.cpp  UnableToDetermineWorkerType.h  WorkerAddingException.cpp  WorkerAddingException.h  forwards.h  includes.h
src/engine/graphics_workers/: forwards.h
src/engine/modules/opengl/: GLFWOpenGLModule.cpp  GLFWOpenGLModule.h  GLSLComputeShader.cpp  GLSLComputeShader.h  GLSLFragmentShader.cpp  GLSLFragmentShader.h  GLSLGeometryShader.cpp  GLSLGeometryShader.h  GLSLProgram.cpp  GLSLProgram.h  GLSLShader.cpp  GLSLShader.h  GLSLTesselationControlShader.cpp  GLSLTesselationControlShader.h  GLSLTesselationEvaluationShader.cpp  GLSLTesselationEvaluationShader.h  GLSLVertexShader.cpp  GLSLVertexShader.h  forwards.h  includes.h
src/engine/modules/opengl/exceptions/: UnableToCompileGLSLShader.cpp  UnableToCompileGLSLShader.h  UnableToLinkGLSLProgram.cpp  UnableToLinkGLSLProgram.h  forwards.h  includes.h
src/math/: BaseVector.hpp  MathException.hpp  RangeException.hpp  Vector.hpp  Vector3.hpp  forwards.h  includes.h
test/: .testmath.cpp.swp  a.out  testmath.cpp
(+38 files in other folders)
